--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,9 @@ jobs:
     - uses: actions/setup-dotnet@v4
       with:
         dotnet-quality: ga
-        dotnet-version: 3.1
+        dotnet-version: |
+          3.1
+          8.0
 
     - uses: actions/checkout@v4
 
