--- a/.github/actions/dotnet-test-build/action.yml
+++ b/.github/actions/dotnet-test-build/action.yml
@@ -5,11 +5,10 @@ runs:
   using: "composite"
 
   steps:
-  # # enable when a next .net preview sdk (not in an image) is needed
-  # - uses: actions/setup-dotnet@v4
-  #   with:
-  #     dotnet-quality: ga
-  #     dotnet-version: 10.0
+  - uses: actions/setup-dotnet@v4
+    with:
+      dotnet-quality: ga
+      dotnet-version: 9.0
 
   - uses: actions/cache@v4
     with:
