--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
     steps:
     - run: git config --global core.autocrlf true
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - run: curl -L https://github.com/editorconfig-checker/editorconfig-checker/releases/download/2.3.5/ec-linux-amd64.tar.gz  | tar xzf - -C /opt
     - run: /opt/bin/ec-linux-amd64 -v
@@ -46,7 +46,7 @@ jobs:
           - '>=23.1.0'
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - run: node build/make-nojquery
 
@@ -69,7 +69,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - run: nuget install -Verbosity quiet -ExcludeVersion -OutputDirectory . -Version 2022.2.3 JetBrains.dotCover.CommandLineTools
 
@@ -77,7 +77,7 @@ jobs:
 
     - run: JetBrains.dotCover.CommandLineTools\tools\dotCover cover --ReturnTargetExitCode --ReportType=DetailedXML --Filters="+:module=DevExtreme.AspNet.Data" --Output=coverage_dotnet.xml --TargetExecutable=net\dotnet-test-all.cmd
 
-    - uses: codecov/codecov-action@v3
+    - uses: codecov/codecov-action@v4
       with:
         files: coverage_dotnet.xml
 
@@ -86,19 +86,22 @@ jobs:
 
     env:
       RELEASE_KEY_SECRET: ${{ secrets.RELEASE_KEY_SECRET }}
+      DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
 
     steps:
-    - uses: actions/setup-dotnet@v3
+    - uses: actions/setup-dotnet@v4
       with:
         dotnet-quality: ga
         dotnet-version: |
           3.1
           6.0
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - if: ${{ env.RELEASE_KEY_SECRET != '' }}
       run: |
+        wget http://archive.ubuntu.com/ubuntu/pool/main/o/openssl1.0/libssl1.0.0_1.0.2n-1ubuntu5_amd64.deb
+        sudo dpkg -i libssl1.0.0_1.0.2n-1ubuntu5_amd64.deb
         curl -L -o /opt/secure-file.zip https://github.com/appveyor/secure-file/releases/download/1.0.1/secure-file.zip
         unzip /opt/secure-file.zip -d /opt/secure-file
         dotnet /opt/secure-file/secure-file.dll -decrypt net/DevExtreme.AspNet.Data/release.snk.enc -secret ${{ env.RELEASE_KEY_SECRET }}
@@ -112,7 +115,7 @@ jobs:
     - if: ${{ env.RELEASE_KEY_SECRET != '' }}
       run: dotnet pack net/DevExtreme.AspNet.Data --configuration=Release --include-symbols
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         name: release-packages
         path: |
@@ -123,12 +126,12 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - run: dotnet build net/DevExtreme.AspNet.Data
     - run: net\docfx\build.cmd
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         name: docfx-site
         path: net/docfx/build/site
