--- a/net/DevExtreme.AspNet.Data.Tests.EFCore8/DevExtreme.AspNet.Data.Tests.EFCore8.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore8/DevExtreme.AspNet.Data.Tests.EFCore8.csproj
@@ -9,9 +9,8 @@
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
-    <PackageReference Include="Microsoft.Identity.Client" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="System.Formats.Asn1" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
