--- a/net/DevExtreme.AspNet.Data.Tests.EFCore9/DevExtreme.AspNet.Data.Tests.EFCore9.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore9/DevExtreme.AspNet.Data.Tests.EFCore9.csproj
@@ -6,8 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" />
     <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="9.0.8" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
